human_written_tests/WebAssembly/processed_control_flow_validation/test_unreachable_12.wast
(assert_invalid
  (module (func $type-unconsumed-poly1 (unreachable) (i32.const 0) (select)))
  "type mismatch"
)